# ITI_Ros_Tasks

./: .gitignore
hello_ros2/: CMakeLists.txt  package.xml
hello_ros2/src/: hello_node.cpp
int_pub_sub/: CMakeLists.txt  package.xml
int_pub_sub/src/: pub_node.cpp  sub_node.cpp
lab2_turtle_mover/: CMakeLists.txt  package.xml
lab2_turtle_mover/launch/: patrol_robot.launch.py
lab2_turtle_mover/msg/: RobotStatus.msg
lab2_turtle_mover/src/: patrol_controller.cpp  status_publisher.cpp
my_python_pkg/: package.xml  setup.py
my_python_pkg/my_python_pkg/: hello_node_py.py
my_robot_nav2/: CMakeLists.txt  package.xml  parameters.md
my_robot_nav2/config/: nav2.rviz
my_robot_nav2/launch/: nav2_simulation.launch.py  slam.launch.py
my_robot_nav2/maps/: README.md
robot_tf_localization/: cmd.txt  lab_03.md  package.xml  setup.py
robot_tf_localization/config/: ekf.yaml
robot_tf_localization/launch/: robot_tf_localization.launch.py
say_hi_service/: CMakeLists.txt  package.xml
say_hi_service/src/: say_hi_client.cpp
task_1_cpu_temp/: CMakeLists.txt  package.xml
task_1_cpu_temp/launch/: launch.py
task_1_cpu_temp/src/: pub_node.cpp  sub_node.cpp
task_2_Obstacle_Detection/: package.xml  setup.cfg  setup.py
task_2_Obstacle_Detection/task_2_Obstacle_Detection/: pub_sensor.py  sub_sensor.py
task_3_speed_limiter/: CMakeLists.txt  package.xml
task_3_speed_limiter/src/: speed_limiter.cpp
task_4_odm_speed/: package.xml  setup.cfg  setup.py
task_4_odm_speed/task_4_odm_speed/: odm_speed.py
task_5_csv_playback/: package.xml  setup.cfg  setup.py
task_5_csv_playback/task_5_csv_playback/: csv_playback.py
